--- a/resources/dns-record/crd.yaml
+++ b/resources/dns-record/crd.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: dnsrecords.easyaas.dev
+  name: dnsrecords.core.easyaas.dev
 spec:
   scope: Namespaced
-  group: easyaas.dev
+  group: core.easyaas.dev
   names:
     categories:
       - easyaas
@@ -35,8 +35,15 @@ spec:
             status:
               type: object
               properties:
+                conditions:
+                  type: array
+                  items:
+                    type: object
+                  x-kubernetes-preserve-unknown-fields: true
                 ready:
                   type: boolean
                 kopf:
                   type: object
               x-kubernetes-preserve-unknown-fields: true
+      subresources:
+        status: {}
