--- a/controllers/files/easyaas_resource_params.json
+++ b/controllers/files/easyaas_resource_params.json
@@ -1,4 +1,4 @@
 {
-  "source": "app.terraform.io/hashicorp/consul/aws",
+  "source": "github.com/nilscan/easy-aas-dns//terraform/record",
   "version": "0.24"
 }
