--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["Nilscan"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-kopf = "^1.36.1"
+kopf = {extras = ["dev"], version = "^1.36.1"}
 kubernetes = "^26.1.0"
 Flask = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
