--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ controllers/files/.terraform.lock.hcl
 /local-testing/k3d/easyaas-okta.yaml
 resources/dns-record.zip
 resources/dns-record/_build
+philosophy.md
