--- a/controllers/terraform_resource_controller/charts/terraform-job/values.yaml
+++ b/controllers/terraform_resource_controller/charts/terraform-job/values.yaml
@@ -1,7 +1,10 @@
-name: null
 managedBy: null
 easyaasResourceParams: {}
 resource: {}
 resourceMeta: {}
 resourceSpec: {}
 terragrunt: ""
+
+serviceAccount:
+  annotations: {}
+  labels: {}
